--- a/css/main.css
+++ b/css/main.css
@@ -197,3 +197,24 @@ body {
 		font-size: 18px;
 	}	
 } 
+
+.what_title {
+	font-size: 48px;
+	color: #ed7a81;
+	text-align: center;
+	margin-top: 80px;
+}
+
+.what_text {
+	font-size: 24px;
+	text-align: center;
+}
+
+.get_more {
+	font-size: 33px;
+	color: #d5a14f;
+	text-align: center;
+	display: block;
+	margin: 0 auto;
+	margin-top: 30px;
+}
